# pao

./: .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  LICENSE  README.ko.md  README.md
.github/: pull_request_template.md
docs/: error-codes.md  versioning.md
docs/releases/: v0.1.0-verification.md  v0.1.0.md
src/: ai_client.rs  approval.rs  change.rs  cli.rs  command.rs  command_log.rs  config.rs  doctor.rs  error.rs  git.rs  lib.rs  main.rs  task.rs  test_support.rs  validation.rs  workspace.rs
tests/: cli.rs
