[package]
name = "pao"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Project Agent Orchestrator"
repository = "https://github.com/gmlwo530/pao"

[dependencies]
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread"] }
